// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCoursePage renders html correctly 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Create a New Course
    </title>
  </HelmetWrapper>
  <ConfirmationModal
    body="This will create a new course in studio. Confirm that your course number is correct, as it cannot be changed later."
    buttonLabel="Create"
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title="Create a New Course?"
  />
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={Object {}}
        courseRunOptions={Object {}}
        currentFormValues={Object {}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-form"
        getFormState={[Function]}
        id="create-course-form"
        initialValues={Object {}}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        organizations={Array []}
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        submitAsSideEffect={false}
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
      />
    </div>
  </PageContainer>
</Fragment>
`;

exports[`CreateCoursePage renders page correctly while fetching 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Create a New Course
    </title>
  </HelmetWrapper>
  <ConfirmationModal
    body="This will create a new course in studio. Confirm that your course number is correct, as it cannot be changed later."
    buttonLabel="Create"
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title="Create a New Course?"
  />
  <PageContainer
    className=""
    wide={false}
  >
    <LoadingSpinner
      message="Loading…"
    />
  </PageContainer>
</Fragment>
`;

exports[`CreateCoursePage renders page correctly with course create error 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Create a New Course
    </title>
  </HelmetWrapper>
  <ConfirmationModal
    body="This will create a new course in studio. Confirm that your course number is correct, as it cannot be changed later."
    buttonLabel="Create"
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title="Create a New Course?"
  />
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={Object {}}
        courseRunOptions={Object {}}
        currentFormValues={Object {}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-form"
        getFormState={[Function]}
        id="create-course-form"
        initialValues={Object {}}
        isCreating={false}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        organizations={
          Array [
            Object {
              "key": "edx",
              "name": "edX",
            },
            Object {
              "key": "edx2",
              "name": "edX2",
            },
          ]
        }
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        submitAsSideEffect={false}
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
      />
      <StatusAlert
        alertType="danger"
        className=""
        dismissible={false}
        iconClassNames={Array []}
        id="create-error"
        message={
          Array [
            "Fail",
            <br />,
          ]
        }
        onClose={[Function]}
        title={null}
      />
    </div>
  </PageContainer>
</Fragment>
`;

exports[`CreateCoursePage renders page correctly with course create in progress 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Create a New Course
    </title>
  </HelmetWrapper>
  <ConfirmationModal
    body="This will create a new course in studio. Confirm that your course number is correct, as it cannot be changed later."
    buttonLabel="Create"
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title="Create a New Course?"
  />
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={Object {}}
        courseRunOptions={Object {}}
        currentFormValues={Object {}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-form"
        getFormState={[Function]}
        id="create-course-form"
        initialValues={Object {}}
        isCreating={true}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        organizations={
          Array [
            Object {
              "key": "edx",
              "name": "edX",
            },
            Object {
              "key": "edx2",
              "name": "edX2",
            },
          ]
        }
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        submitAsSideEffect={false}
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
      />
    </div>
  </PageContainer>
</Fragment>
`;

exports[`CreateCoursePage renders page correctly with course create success 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Create a New Course
    </title>
  </HelmetWrapper>
  <ConfirmationModal
    body="This will create a new course in studio. Confirm that your course number is correct, as it cannot be changed later."
    buttonLabel="Create"
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title="Create a New Course?"
  />
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={Object {}}
        courseRunOptions={Object {}}
        currentFormValues={Object {}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-form"
        getFormState={[Function]}
        id="create-course-form"
        initialValues={Object {}}
        isCreating={false}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        organizations={
          Array [
            Object {
              "key": "edx",
              "name": "edX",
            },
            Object {
              "key": "edx2",
              "name": "edX2",
            },
          ]
        }
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        submitAsSideEffect={false}
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
      />
    </div>
  </PageContainer>
</Fragment>
`;

exports[`CreateCoursePage renders page correctly with no publisherUserInfo 1`] = `
<StatusAlert
  alertType="danger"
  className=""
  dismissible={false}
  iconClassNames={Array []}
  id="error"
  message="User information unavailable"
  onClose={[Function]}
  title="Course Create Form failed to load: "
/>
`;

exports[`CreateCoursePage renders page correctly with org error 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Create a New Course
    </title>
  </HelmetWrapper>
  <ConfirmationModal
    body="This will create a new course in studio. Confirm that your course number is correct, as it cannot be changed later."
    buttonLabel="Create"
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title="Create a New Course?"
  />
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={Object {}}
        courseRunOptions={Object {}}
        currentFormValues={Object {}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-form"
        getFormState={[Function]}
        id="create-course-form"
        initialValues={Object {}}
        isCreating={false}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        organizations={
          Array [
            Object {
              "key": "edx",
              "name": "edX",
            },
            Object {
              "key": "edx2",
              "name": "edX2",
            },
          ]
        }
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        submitAsSideEffect={false}
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
      />
      <StatusAlert
        alertType="danger"
        className=""
        dismissible={false}
        iconClassNames={Array []}
        id="create-error"
        message={
          Array [
            "Fail",
            <br />,
          ]
        }
        onClose={[Function]}
        title={null}
      />
    </div>
  </PageContainer>
</Fragment>
`;

exports[`CreateCoursePage renders page correctly with organizations 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Create a New Course
    </title>
  </HelmetWrapper>
  <ConfirmationModal
    body="This will create a new course in studio. Confirm that your course number is correct, as it cannot be changed later."
    buttonLabel="Create"
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title="Create a New Course?"
  />
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={Object {}}
        courseRunOptions={Object {}}
        currentFormValues={Object {}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-form"
        getFormState={[Function]}
        id="create-course-form"
        initialValues={Object {}}
        isCreating={false}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        organizations={
          Array [
            Object {
              "key": "edx",
              "name": "edX",
            },
            Object {
              "key": "edx2",
              "name": "edX2",
            },
          ]
        }
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        submitAsSideEffect={false}
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
      />
    </div>
  </PageContainer>
</Fragment>
`;
